--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,12 +55,12 @@ nav:
     - Preprocessor overview: 'preprocessor/overview.md'
     - preprocess command: 'preprocessor/preprocess.md'
     - delete command: 'preprocessor/delete.md'
-    - remove_segmentation command: 'preprocessor/remove_segmentation.md'
-    - remove_volume command: 'preprocessor/remove_volume.md'
-    - remove_segment_annotations command: 'preprocessor/remove_segment_annotations.md'
-    - remove_descriptions command: 'preprocessor/remove_descriptions.md'
-    - edit_segment_annotations command: 'preprocessor/edit_segment_annotations.md'
-    - edit_descriptions command: 'preprocessor/edit_descriptions.md'
+    - remove-segmentation command: 'preprocessor/remove_segmentation.md'
+    - remove-volume command: 'preprocessor/remove_volume.md'
+    - remove-segment-annotations command: 'preprocessor/remove_segment_annotations.md'
+    - remove-descriptions command: 'preprocessor/remove_descriptions.md'
+    - edit-segment-annotations command: 'preprocessor/edit_segment_annotations.md'
+    - edit-descriptions command: 'preprocessor/edit_descriptions.md'
     # - Preprocessor: preprocessor.md
     # - Server: server.md
     # - Volumes & Segmentations Toolkit: vs_toolkit.md
