--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,7 +41,8 @@ extra_javascript:
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 nav:
-  - 'index.md'
+  # - 'index.md'
+  - Installation: 'set_up/set_up.md'
   - Preprocessor documentation:
     - Preprocessor overview: 'preprocessor/overview.md'
     - preprocess command: 'preprocessor/preprocess.md'
