--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,8 +41,7 @@ extra_javascript:
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 nav:
-  # - 'index.md'
-  - Installation: 'set_up/set_up.md'
+  - Installation: 'index.md'
   - Preprocessor documentation:
     - Preprocessor overview: 'preprocessor/overview.md'
     - preprocess command: 'preprocessor/preprocess.md'
@@ -59,3 +58,4 @@ nav:
     - Hosting Server API: 'server_api/overview.md'
 
 repo_url: https://github.com/molstar/docs
+dev_addr: '127.0.0.1:5000'
